<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <RadioButton
        android:id="@+id/cbNoWatchlists"
        android:layout_width="match_parent"
        android:layout_height="@dimen/click_height"
        android:text="@string/all_symbols"
        android:textSize="@dimen/font_size_bigger"
        android:visibility="gone"
        android:gravity="center_vertical"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNewList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_playlist_add_24"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/new_list"
        android:textColor="@android:color/white" />
</LinearLayout>