<resources>
    <string name="app_name">TastyTrade</string>
    <string name="done">Done</string>
    <string name="symbol">Enter symbol</string>
    <string name="new_list">New Watchlist</string>
    <string name="edit_list">Edit Watchlists</string>
    <string name="all_symbols">All Symbols</string>
    <string name="arrow_down">▼</string>
    <string name="enter_watchlist_name">Enter watchlist name</string>
    <string name="add_watchlist">Add Watchlist</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="can_not_be_blank">Can not be empty</string>
    <string name="delete">Delete</string>
    <string name="delete_watchlist_confirmation">Would you like to delete watchlist `%s`?</string>
    <string name="delete_symbol_confirmation">Would you like to remove symbol `%s`?</string>
    <string name="start_typing_symbol">No entered symbols yet..</string>
    <string name="no_seacrh_results">No symbols found..</string>
    <string name="ask">Ask:</string>
    <string name="ask_">Ask: %s$</string>
    <string name="bid">Bid:</string>
    <string name="bid_">Bid: %s$</string>
    <string name="last">Last:</string>
    <string name="last_">Last: %s$</string>
    <string name="loading">Loading..</string>
    <string name="no_watchlists">Create Watchlist</string>
    <string name="offlline">You are offline</string>
</resources>