<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/cbWatchlistItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/click_height"
        android:textSize="@dimen/font_size_bigger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="My watchlist" />

    <ImageButton
        android:id="@+id/btnEditList"
        android:layout_width="@dimen/click_width"
        android:layout_height="@dimen/click_height"
        android:contentDescription="@string/delete"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/size_margin"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="@dimen/click_width"
        android:layout_height="@dimen/click_height"
        android:contentDescription="@string/delete"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>